# PZH-Market-Maker

./: .gitignore  README.md  meson.build
docs/: Makefile  index.html  stoichkov.md  stoikov.md
docs/css/: main.css
docs/html/de/: index.html
docs/html/es/: index.html
docs/js/: main.js
docs/json/: exchange.json  setting.json
docs/latex/de/: stoikov.tex
docs/latex/es/: stoikov.tex
docs/pdf/de/: stoikov.aux
docs/pdf/es/: stoikov.aux
docs/ts/: main.ts
example/bash/: websocket.sh
example/c/: main  main.c
example/c/connect/binance/web/: websocket_callback.c
include/pzh/pzhmm/: pzhmm.h
include/pzh/pzhmm/exchange/: binance.h  exchange.h  kraken.h
include/pzh/pzhmm/risk/: inventory.h  market.h  microprice.h
include/pzh/pzhmm/utils/: common.h  json.h  security.h  string.h
include/reymon/reymm/: reymm.h
include/reymon/reymm/connect/: binance.h  connect.h  kraken.h
include/reymon/reymm/risk/: mp.h
include/reymon/reymm/utilities/: common.h  io.h  json.h  ssl.h
src/: kern.c
src/connect/: meson.build
src/connect/binance/: aktualisieren.c  connect.c  freigeben.c  initialiseren.c
src/connect/binance/main/: initialiseren.c
src/connect/binance/web/: payload.c  websocket_callback.c  websocket_concat.c
src/exchange/: meson.build
src/exchange/binance/: connect.c  meson.build
src/exchange/binance/callback/: callback.c  meson.build  variables.c
src/exchange/binance/json/: binance_subscribe.c  meson.build
src/exchange/binance/order/: meson.build
src/exchange/kraken/: connect.c  meson.build
src/exchange/kraken/callback/: meson.build
src/exchange/kraken/json/: meson.build
src/exchange/kraken/order/: meson.build
src/kern/: aktualisieren.cpp  freigeben.cpp  initialiseren.c  initialiseren.cpp  kern.cpp  kern.hpp  reymm.cpp
src/risk/: meson.build
src/risk/inventory/: meson.build
src/risk/market/: market_spread.c  meson.build  mid_price.c
src/risk/microprice/: meson.build  microprice.c
src/risk/mp/: adjustment.c  imbalance.c  kappa.c  market_spread.c  micro_price.c  mid_price.c  optimal_spread.c  quotes.c  reservation_price.c  sigma.c  spread.c  time_remaining.c  volume.c
src/utilities/: meson.build
src/utilities/io/: close.c  meson.build  open.c  reymm_io.c
src/utilities/json/: content.c  open.c
src/utils/: free_json.c  init_json.c  lower.c  meson.build  read_json.c  upper.c
