# ********************************
# *** Author: PZH Gesellschaft ***
# *** Datum: 08 Mai 2026       ***
# *** Aktua: 14 Mai 2026       ***
# *** Lizenz: AGPL-3-or-later  ***
# ********************************

subdir('json')
subdir('order')
subdir('callback')

files_exchange_binance = files(
	'connect.c'
)