# *********************************************
# *** Author: PZH Gesellschaft, SAS de CV   ***
# *** Date: 8 Mai 2026                      ***
# *** Update: 8 Mai 2026                    ***
# *** License: AGPL-3-or-later              ***
# *********************************************

files_risk_inventory = files(
	'short.c',
	'long.c'
)