# *********************************************
# *** Author: PZH Gesellschaft, SAS de CV   ***
# *** Date: 8 Mai 2026                      ***
# *** Update: 8 Mai 2026                    ***
# *** License: AGPL-3-or-later              ***
# *********************************************

files_risk_microprice = files(
	'imbalance.c',
	'microprice.c',
	'optimal_spread.c',
	'quote.c',
	'remaining_time.c',
	'reservation_price.c'
)